erDiagram
  %% ByteCart ERD (GitHub-safe)

  USERS ||--o{ ADDRESSES : has
  CATEGORIES ||--o{ CATEGORIES : parent_of
  CATEGORIES ||--o{ PRODUCTS : groups
  PRODUCTS ||--o{ PRODUCT_VARIANTS : offers
  PRODUCT_VARIANTS ||--|| INVENTORIES : tracked_by
  USERS ||--o{ CARTS : owns
  CARTS ||--o{ CART_ITEMS : contains
  PRODUCT_VARIANTS ||--o{ CART_ITEMS : referenced_by
  USERS ||--o{ ORDERS : places
  ORDERS ||--o{ ORDER_ITEMS : contains
  PRODUCT_VARIANTS ||--o{ ORDER_ITEMS : referenced_by
  ORDERS ||--|| PAYMENTS : settles
  USERS ||--o{ REVIEWS : writes
  PRODUCTS ||--o{ REVIEWS : receives

  USERS {
    int user_id PK
    string email
    string password_hash
    string full_name
    string phone
    boolean is_active
    datetime created_at
  }

  ADDRESSES {
    int address_id PK
    int user_id FK
    string label
    string recipient_name
    string line1
    string line2
    string city
    string state
    string postal_code
    string country
    boolean is_default
  }

  CATEGORIES {
    int category_id PK
    int parent_id FK
    string name
    string slug
    boolean is_active
  }

  PRODUCTS {
    int product_id PK
    int category_id FK
    string name
    string slug
    string description
    decimal base_price
    boolean is_active
    datetime created_at
  }

  PRODUCT_VARIANTS {
    int variant_id PK
    int product_id FK
    string sku
    string attrs
    decimal price_override
  }

  INVENTORIES {
    int inventory_id PK
    int variant_id FK
    int qty_available
  }

  CARTS {
    int cart_id PK
    int user_id FK
    string status
    datetime created_at
    datetime updated_at
  }

  CART_ITEMS {
    int cart_item_id PK
    int cart_id FK
    int variant_id FK
    int quantity
    decimal unit_price
  }

  ORDERS {
    int order_id PK
    int user_id FK
    string status
    datetime placed_at
    string currency
    decimal total_amount
    string shipping_address
  }

  ORDER_ITEMS {
    int order_item_id PK
    int order_id FK
    int variant_id FK
    string product_name
    string sku
    decimal unit_price
    int quantity
    decimal line_total
  }

  PAYMENTS {
    int payment_id PK
    int order_id FK
    string provider
    decimal amount
    string status
    string txn_ref
    datetime paid_at
  }

  REVIEWS {
    int review_id PK
    int user_id FK
    int product_id FK
    int rating
    string title
    string body
    string status
    datetime created_at
    datetime updated_at
  }
